# graveboards-backend

./: .dockerignore  .env.example  .env.test  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  logging.uvicorn.yaml  logging.yaml  main.py  manage.py  migrate.py  migrate_renames.py  migrate_restrictions.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.py
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2a3b4c5d6e7f_add_enforce_user_id_match_to_queues.py  3c32d58a5a27_initial_schema_from_sqlalchemy_models.py  4f8e2a1c9d30_initial_schema.py  540b96c318fb_add_search_performance_indexes.py  7b3d5e9f2a18_add_search_performance_indexes.py  8a1c4f6e2d93_add_is_public_to_queue_rules.py
api/: auth.py  decorators.py  pagination.py  utils.py
api/v1/: __init__.py  health.py
app/: __init__.py  beatmap_manager.py  bootstrap.py  config.py  config.pyi  connexion_app.py  enums.py  error_handlers.py  exceptions.py  lifespan.py  logging.py  oauth.py  setup.py  spec.py  test_app.py  text.py  utils.py  version.py
app/beatmaps/: __init__.py  manager.py
app/daemon/: __init__.py  daemon.py  service_daemon.py  supervisor.py
app/database/: __init__.py  db.py  enums.py  lifespan.py  literals.py  migrations.py  queue_access.py  roles.py  sql.py  utils.py
app/fixtures/: __init__.py  archive_fetcher.py  archives.py  base_fetcher.py  bn_queue_comments.py  categorization.py  constants.py  coverage.py  criteria.py  display.py  failed_id_store.py  fetch_loop.py  fetcher.py  health.py  id_source.py  manager.py  metadata.py  metadata_io.py  orchestrator.py  paths.py  progress.py  queue_metadata.py  queue_request_generator.py  reader.py  sample_counts.py  search_coverage.py  search_test_constants.py  search_test_fetcher.py  search_test_known_ids.py  targeted_fetcher.py  utils.py  validation.py
app/logging/: __init__.py  adapter.py  colors.py  formatter.py  json_formatter.py  setup.py  utils.py
app/manage/: __init__.py  api_keys.py  fixtures.py  reset.py  (+3 more)
docker-init/: 01-init.sh  01-init.sql
docs/: ARCHIVE_INTEGRATION.md  COVERAGE_TARGETS.md  DOCKER_DEPLOYMENT.md  FIXTURE_SELECTION.md  SEEDING.md  TESTING.md  TESTING2.md  TESTING_GAPS.md  TESTING_ISSUES.md  rule_engine_v2.md  rule_engine_v3.md
tests/: conftest.py
(+826 files in other folders)
