[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graveboards-backend"
version = "0.1.0"
description = "Backend service for Graveboards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "connexion[swagger-ui,uvicorn]>=3.3.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.24.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=app",
    "--cov=api",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: fast tests that do not need network, Redis, or PostgreSQL",
    "integration: tests that need local infrastructure such as Redis or Postgres",
    "e2e: tests that exercise the ASGI app through Connexion routing",
    "security: tests for auth, authorization, token, API-key, or regex safety behavior",
    "slow: tests that are intentionally slower than the default suite",
    "search: tests that exercise the search engine with queries",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "W", "F", "C", "B", "PL", "PT", "ARG"]
ignore = ["PLR", "B028"]

[tool.ruff.per-file-ignores]
"tests/*" = ["PLR", "S"]
"manage.py" = ["S"]
"app/manage/*" = ["S"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
strict_equality = true
explicit_package_bases = true
mypy_path = "app"
